Fix init TC first + overflow : scroll

--- a/client/src/Editor/Editor.css
+++ b/client/src/Editor/Editor.css
@@ -16,6 +16,7 @@
 }
 
 .ui_Editor {
+  overflow: scroll;
   position: absolute;
   left: 0px;
   top: 0px;
